--- a/css/album.css
+++ b/css/album.css
@@ -1,7 +1,7 @@
 html{
     height: 100%;
     text-align: center;
-    background-image: url(/img/background.png);
+    background-color: #181818;
 }
 
 h1{
